test/spec_vectors/simd_i8x16_cmp/fail/module_1.wat
(module (func (result v128) (i8x16.eq (i32.const 0) (f32.const 0))))